--- a/index.html
+++ b/index.html
@@ -13,17 +13,54 @@
             <div class="left-panel">
                 <div class="top"></div>
                 <div class="middle">
-                    <select id="selectorAny"></select>
+                    <button id="mostrarVisualitzacioPerAny">Per any</button>
+                    <button id="mostrarVisualitzacioEvolutiu">Global</button>
                 </div>
                 <div class="bottom">
+                    <select id="selectorAny"></select>
+
                     <button id="toggleButtonVehicle">Tipus de vehicle</button>
                     <div id="checkboxTipusVehicle" class="checkbox-container desplegable" style="display: none;">
                         <div id="checkboxTipusVehicle" class="checkbox-container"></div>
                     </div>
+
+                    <button id="toggleButtonCause">Causa vianant</button>
+                    <div id="checkboxTipusCausa" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxTipusCausa" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonPersona">Tipus de persona</button>
+                    <div id="checkboxTipusPersona" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxTipusPersona" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonVictimitzacio">Tipus de victimització</button>
+                    <div id="checkboxTipusVictimitzacio" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxTipusVictimitzacio" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonSexe">Sexe implicats</button>
+                    <div id="checkboxSexe" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxSexe" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonDiaSetmana">Dia de la setmana</button>
+                    <div id="checkboxDiaSetmana" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxDiaSetmana" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonTornDia">Torn del dia</button>
+                    <div id="checkboxTornDia" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxTornDia" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonBarri">Barris de Barcelona</button>
+                    <div id="checkboxBarri" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxBarri" class="checkbox-container"></div>
+                    </div>
                 </div>
                 <div class="foot">
-                    <button id="mostrarVisualitzacioPerAny">Per any</button>
-                    <button id="mostrarVisualitzacioEvolutiu">Global</button>
+                    
                 </div>
             </div>
             <div class="main">
