--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
                     <div id="checkboxBarri" class="checkbox-container desplegable" style="display: none;">
                         <div id="checkboxBarri" class="checkbox-container"></div>
                     </div>
+
+                    <button id="toggleButtonVehicleEvo" style="display: none;">Tipus de vehicle</button>
+                    <div id="checkboxTipusVehicleEvo" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxTipusVehicleEvo" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonSexeEvo" style="display: none;">Sexe implicats</button>
+                    <div id="checkboxSexeEvo" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxSexeEvo" class="checkbox-container"></div>
+                    </div>
+
+                    <button id="toggleButtonBarriEvo" style="display: none;">Barris de Barcelona</button>
+                    <div id="checkboxBarriEvo" class="checkbox-container desplegable" style="display: none;">
+                        <div id="checkboxBarriEvo" class="checkbox-container"></div>
+                    </div>
                 </div>
                 <div class="foot">
                     
